# calculator

./: *compilation*  *compilation*~  1.txt  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.bat  build.bat~  cmake_install.cmake  emacs-30.0.50.exe.stackdump  gen.cpp  gen.cpp~  gen.exe.stackdump  gen.h  gen.h~  genpdf.cpp  genpdf.cpp~  genpdf.h  genpdf.h~  haslibharu.cpp  haslibharu.cpp~  main  main.cpp  main.cpp~  testbuild.cpp  testbuild.cpp~  testgenpdf.cpp  testqpdf.cpp  testqpdf.cpp~  testunique.cpp  testunique.cpp~  types.cpp  types.cpp~  types.h  types.h~  xiaozan.conf
calctree/: CMakeLists.txt  Makefile  calcmain.cpp  calcmain.cpp~  cmake_install.cmake  compile_flags.txt1  main.cpp  main.cpp~  mainlib.cpp  mainlib.cpp~  mainlib.h  mainlib.h~
